[package]
name = "ronky-sensor-date-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
chrono = "0.4.23"
ronky-components = { path = "../../ronky-components" }
ronky-resources = { path = "../../ronky-resources" }
